<?xml version="1.0" encoding="utf-8" ?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginMainBlock"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF4682B4"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/welcomeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="46dp"
                android:paddingTop="20.0dip"
                android:paddingEnd="46dp"
                android:paddingBottom="24.0dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/geeksLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="65.0dip"
                    android:src="@drawable/ic_vk_new_logo" />

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/signInText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:alpha="0.52"
                    android:fontFamily="@font/ys_display_regular"
                    android:lineSpacingExtra="5.0dip"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginCardView"
                android:layout_width="match_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/login_top_rounded_corner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeView">

                <TextView
                    android:id="@+id/loginORSignup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/login_signUp"
                    android:textColor="@color/color_text_primary"
                    android:textColorHint="@color/color_text_hint"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/edit_text_email_hint"
                    android:textColor="@color/color_text_primary"
                    android:textColorHint="@color/color_text_hint"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintTop_toBottomOf="@+id/loginORSignup">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ys_display_regular"
                        android:inputType="textEmailAddress"
                        android:tag="binding_1"
                        android:textColor="@color/color_text_primary"
                        android:textColorHint="@color/color_text_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextInputLayout"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:hint="@string/edit_text_password_hint"
                    android:textColor="@color/color_text_primary"
                    android:textColorHint="@color/color_text_hint"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeColor="#D9D7D7"
                    app:endIconDrawable="@drawable/custom_password_eye"
                    app:endIconMode="password_toggle"
                    app:endIconTint="#888888"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ys_display_regular"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:tag="binding_2"
                        android:textColor="@color/color_text_primary"
                        android:textColorHint="@color/color_text_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/ys_display_regular"
                    android:tag="binding_3"
                    android:text="@string/forgot_password"
                    android:textColor="@color/color_text_primary"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/logInButton"
                    style="@style/LoginSignupButton"
                    android:layout_marginTop="22dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:tag="binding_4"
                    android:text="@string/button_login_text"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

                <LinearLayout
                    android:id="@+id/signUpLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="34dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/privacyCookiePolicyText"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/ys_display_regular"
                        android:text="@string/no_account_text"
                        android:textColor="@color/black"
                        android:textSize="16.0sp" />

                    <TextView
                        android:id="@+id/singUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ys_display_regular"
                        android:tag="binding_9"
                        android:text="@string/sign_up_now"
                        android:textColor="@color/color_primary"
                        android:textSize="16.0sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/privacyCookiePolicyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ys_display_regular"
                    android:text="@string/agree_to_our_privacy_policy"
                    android:textAlignment="center"
                    android:textColor="#888888"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/policyText"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/policyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ys_display_regular"
                    android:tag="binding_10"
                    android:text="@string/privacy_text"
                    android:textAlignment="center"
                    android:textColor="@color/color_text_primary"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/guideLineBottom"
                    app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@+id/guideLineStart"
                    app:layout_constraintVertical_bias="0.8" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="46.0dip" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideLineStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="46.0dip" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideLineBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="26.0dip" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <include
        android:id="@+id/loadingLayout"
        layout="@layout/utils_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>
