<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".settings.ui.activity.SettingsFragment">

    <TextView
        style="@style/headerTextViewStyle"
        android:layout_marginStart="@dimen/common_padding"
        android:layout_marginTop="@dimen/common_padding"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary"
        tools:context=".settings.ui.activity.SettingsFragment">

        <!-- Кнопка редактирования профиля -->
        <ImageView
            android:id="@+id/editProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_edit"
            app:tint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Фото аватарки -->
        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/avatar_image"
            android:src="@drawable/avatar"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editProfileButton"
            android:background="@drawable/circle_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name"
                style="@style/headerTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Имя"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Михаил Флийчук"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/email"
                style="@style/headerTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Почта"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="123123@example.com"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/institute"
                style="@style/headerTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Отдел"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileInstitute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ПНР"
                android:textSize="18sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_size"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="24dp">

                <TextView
                    style="@style/headerTextViewStyle"
                    android:text="@string/dark_theme" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/themeSwitcher"
                    style="@style/switchStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_size">

                <TextView
                    style="@style/headerTextViewStyle"
                    android:text="@string/share_app" />

                <ImageView
                    style="@style/settingsIcons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/common_padding"
                    android:src="@drawable/share_icon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/supportButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_size">

                <TextView
                    style="@style/headerTextViewStyle"
                    android:text="@string/write_to_support" />

                <ImageView
                    style="@style/settingsIcons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="14dp"
                    android:src="@drawable/support_icon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/userAgreementButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_item_size">

                <TextView
                    style="@style/headerTextViewStyle"
                    android:text="@string/user_agreement" />

                <ImageView
                    style="@style/settingsIcons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/arrow_forward" />
            </FrameLayout>
        </LinearLayout>

        <Button
            style="@style/headerTextViewStyle"
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Выйти"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="25dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
