<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".search.ui.activity.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_bold"
                    android:includeFontPadding="false"
                    android:text="@string/search_pdf"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_5r_white"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:fontFamily="@font/ys_display_medium"
                        android:hint="@string/search_by_name_or_tag"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:minHeight="50dp"
                        android:paddingHorizontal="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btSearch"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@null"
                        android:padding="10dp"
                        android:src="@drawable/ic_search_white"
                        android:tint="@color/black" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPdfList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnClearHistory"
            tools:listitem="@layout/adapter_pdf_list" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ys_display_bold"
            android:includeFontPadding="false"
            android:text="Поиск не удался"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnClearHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:visibility="visible"
            style="@style/searchButtonsStyle"
            android:layout_marginTop="@dimen/common_padding"
            android:layout_marginBottom="@dimen/common_padding"
            android:text="@string/clear_history"
            />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
